@@ -76,7 +76,7 @@ def initlog(*allargs):
     send an error message).
 
     """
-    global logfp, log
+    global log, logfile, logfp
     if logfile and not logfp:
         try:
             logfp = open(logfile, "a")
@@ -95,6 +95,15 @@ def dolog(fmt, *args):
 def nolog(*allargs):
     """Dummy function, assigned to log when logging is disabled."""
     pass
+
+def closelog():
+    """Close the log file."""
+    global log, logfile, logfp
+    logfile = ''
+    if logfp:
+        logfp.close()
+        logfp = None
+    log = initlog
 
 log = initlog           # The current logging function
 
